--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,11 @@
 <meta charset="utf-8">
+
+<script>
+  if (window.location.href.indexOf('http://goodwikis.com') === 0) {
+    window.location.href = 'http://goodwikis.com{{ page.url }}';
+  }
+</script>
+
 <title>{% if page.title %}{{ page.title }} &#8211; {% endif %}{{ site.title }}</title>
 <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 {% if page.tags %}<meta name="keywords" content="{{ page.tags | join: ', ' }}">{% endif %}
