--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 
 <script>
-  if (window.location.href.indexOf('http://goodwikis.com') === 0) {
+  if (window.location.href.indexOf('goodwikis.com') === 0) {
     window.location.href = 'http://goodwikis.com{{ page.url }}';
   }
 </script>
