--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,7 @@
 <meta charset="utf-8">
 
 <script>
-alert(window.location.href.indexOf('goodwikis.com'));
-  if (window.location.href.indexOf('goodwikis.com') === 0) {
-alert("redirecting");
+  if (window.location.href.indexOf('goodwikis.com') == -1) {
     window.location.href = 'http://goodwikis.com{{ page.url }}';
   }
 </script>
