--- a/_includes/a.html
+++ b/_includes/a.html
@@ -28,8 +28,6 @@ span {
 .sc24 {
 }
 </style>
-</head>
-<body>
 <div style="float: left; white-space: pre; line-height: 1; background: #FFFFFF; "><span class="sc4">Local</span><span class="sc24"> </span><span class="sc6">File</span><span class="sc24"> </span><span class="sc12">&amp;</span><span class="sc0">fileInput</span><span class="sc12">,</span><span class="sc24"> </span><span class="sc12">&amp;</span><span class="sc0">fileOutput</span><span class="sc12">;</span><span class="sc24">
 </span><span class="sc4">Local</span><span class="sc24"> </span><span class="sc4">string</span><span class="sc24"> </span><span class="sc12">&amp;</span><span class="sc0">strLine</span><span class="sc12">;</span><span class="sc24">
 
@@ -49,5 +47,4 @@ Error processing*/</span><span class="sc24">
 </span><span class="sc13">End-If</span><span class="sc12">;</span><span class="sc24">
 
 </span><span class="sc12">&amp;</span><span class="sc0">fileInput</span><span class="sc12">.</span><span class="sc0">Close</span><span class="sc12">();</span><span class="sc24">
-</span><span class="sc12">&amp;</span><span class="sc0">fileOutput</span><span class="sc12">.</span><span class="sc0">Close</span><span class="sc12">();</span></div></body>
-</html>
+</span><span class="sc12">&amp;</span><span class="sc0">fileOutput</span><span class="sc12">.</span><span class="sc0">Close</span><span class="sc12">();</span></div>
