--- a/_includes/1-2015-11-14-change-encoding.html
+++ b/_includes/1-2015-11-14-change-encoding.html
@@ -50,4 +50,5 @@ Error processing*/</span><span class="sc24">
 </span><span class="sc13">End-If</span><span class="sc12">;</span><span class="sc24">
 
 </span><span class="sc12">&amp;</span><span class="sc0">fileInput</span><span class="sc12">.</span><span class="sc0">Close</span><span class="sc12">();</span><span class="sc24">
-</span><span class="sc12">&amp;</span><span class="sc0">fileOutput</span><span class="sc12">.</span><span class="sc0">Close</span><span class="sc12">();</span></div>
+</span><span class="sc12">&amp;</span><span class="sc0">fileOutput</span><span class="sc12">.</span><span class="sc0">Close</span><span class="sc12">();</span><span class="sc24">
+</span></div>
