--- a/_includes/1-2015-11-14-change-encoding.html
+++ b/_includes/1-2015-11-14-change-encoding.html
@@ -28,7 +28,7 @@ span {
 .sc24 {
 }
 </style>
-<div class="highlight" style="white-space: pre; line-height: 1; background: #FFFFFF; "><pre><span class="sc4">Local</span><span class="sc24"> </span><span class="sc6">File</span><span class="sc24"> </span><span class="sc12">&amp;</span><span class="sc0">fileInput</span><span class="sc12">,</span><span class="sc24"> </span><span class="sc12">&amp;</span><span class="sc0">fileOutput</span><span class="sc12">;</span><span class="sc24">
+<div class="highlight" style="float: left; white-space: pre; line-height: 1; background: #FFFFFF; "><pre><span class="sc4">Local</span><span class="sc24"> </span><span class="sc6">File</span><span class="sc24"> </span><span class="sc12">&amp;</span><span class="sc0">fileInput</span><span class="sc12">,</span><span class="sc24"> </span><span class="sc12">&amp;</span><span class="sc0">fileOutput</span><span class="sc12">;</span><span class="sc24">
 </span><span class="sc4">Local</span><span class="sc24"> </span><span class="sc4">string</span><span class="sc24"> </span><span class="sc12">&amp;</span><span class="sc0">strLine</span><span class="sc12">;</span><span class="sc24">
 
 </span><span class="sc12">&amp;</span><span class="sc0">fileInput</span><span class="sc24"> </span><span class="sc12">=</span><span class="sc24"> </span><span class="sc4">GetFile</span><span class="sc12">(</span><span class="sc16">"D:\psoft852\fdm01pa\temp\in.txt"</span><span class="sc12">,</span><span class="sc24"> </span><span class="sc16">"R"</span><span class="sc12">,</span><span class="sc24"> </span><span class="sc16">"CP1252"</span><span class="sc12">,</span><span class="sc24"> </span><span class="sc12">%</span><span class="sc4">FilePath_Absolute</span><span class="sc12">);</span><span class="sc24">
@@ -47,4 +47,4 @@ Error processing*/</span><span class="sc24">
 </span><span class="sc13">End-If</span><span class="sc12">;</span><span class="sc24">
 
 </span><span class="sc12">&amp;</span><span class="sc0">fileInput</span><span class="sc12">.</span><span class="sc0">Close</span><span class="sc12">();</span><span class="sc24">
-</span><span class="sc12">&amp;</span><span class="sc0">fileOutput3</span><span class="sc12">.</span><span class="sc0">Close</span><span class="sc12">();</span></pre></div>
+</span><span class="sc12">&amp;</span><span class="sc0">fileOutput</span><span class="sc12">.</span><span class="sc0">Close</span><span class="sc12">();</span></pre></div>
