--- a/_includes/3-2015-11-14-change-encoding.html
+++ b/_includes/3-2015-11-14-change-encoding.html
@@ -1,4 +1,3 @@
-
 <style type="text/css">
 span {
 	font-family: 'Courier New';
@@ -29,7 +28,7 @@ span {
 .sc24 {
 }
 </style>
-<div style="float: left; white-space: pre; line-height: 1; background: #FFFFFF; "><span class="sc4">Local</span><span class="sc24"> </span><span class="sc6">File</span><span class="sc24"> </span><span class="sc12">&amp;</span><span class="sc0">fileRun</span><span class="sc12">;</span><span class="sc24">
+<div class="highlight" style="white-space: pre; line-height: 1; background: #FFFFFF; "><pre><span class="sc4">Local</span><span class="sc24"> </span><span class="sc6">File</span><span class="sc24"> </span><span class="sc12">&amp;</span><span class="sc0">fileRun</span><span class="sc12">;</span><span class="sc24">
 </span><span class="sc4">Local</span><span class="sc24"> </span><span class="sc4">integer</span><span class="sc24"> </span><span class="sc12">&amp;</span><span class="sc0">ExitCode</span><span class="sc12">;</span><span class="sc24">
 </span><span class="sc4">Local</span><span class="sc24"> </span><span class="sc4">string</span><span class="sc24"> </span><span class="sc12">&amp;</span><span class="sc0">path</span><span class="sc12">;</span><span class="sc24">
 
@@ -37,7 +36,7 @@ span {
 
 </span><span class="sc4">try</span><span class="sc24">
    
-   </span><span class="sc12">&amp;</span><span class="sc0">fileRun</span><span class="sc24"> </span><span class="sc12">=</span><span class="sc24"> </span><span class="sc0">GetTempFile</span><span class="sc12">(&amp;</span><span class="sc0">path</span><span class="sc24"> </span><span class="sc12">|</span><span class="sc24"> </span><span class="sc16">"\powershell.bat"</span><span class="sc12">,</span><span class="sc24"> </span><span class="sc16">"W"</span><span class="sc12">,</span><span class="sc24"> </span><span class="sc12">%</span><span class="sc0">FilePath_Absolute</span><span class="sc12">);</span><span class="sc24">
+   </span><span class="sc12">&amp;</span><span class="sc0">fileRun</span><span class="sc24"> </span><span class="sc12">=</span><span class="sc24"> </span><span class="sc0">GetTempFile</span><span class="sc12">(&amp;</span><span class="sc0">path</span><span class="sc24"> </span><span class="sc12">|</span><span class="sc24"> </span><span class="sc16">"\powershell.bat"</span><span class="sc12">,</span><span class="sc24"> </span><span class="sc16">"W"</span><span class="sc12">,</span><span class="sc24"> </span><span class="sc12">%</span><span class="sc4">FilePath_Absolute</span><span class="sc12">);</span><span class="sc24">
 
    </span><span class="sc12">&amp;</span><span class="sc0">fileRun</span><span class="sc12">.</span><span class="sc0">WriteLine</span><span class="sc12">(</span><span class="sc16">"powershell.exe -command ""[System.IO.File]::WriteAllText
    ('D:\psoft852\fdm01pa\temp\out.txt',[System.IO.File]::ReadAllText
@@ -47,9 +46,8 @@ span {
    </span><span class="sc12">&amp;</span><span class="sc0">fileRun</span><span class="sc12">.</span><span class="sc0">Close</span><span class="sc12">();</span><span class="sc24">
    
    </span><span class="sc1">/*Make sure no commits are pending*/</span><span class="sc24">
-   </span><span class="sc12">&amp;</span><span class="sc0">ExitCode</span><span class="sc24"> </span><span class="sc12">=</span><span class="sc24"> </span><span class="sc4">Exec</span><span class="sc12">(</span><span class="sc4">GetEnv</span><span class="sc12">(</span><span class="sc16">"SystemRoot"</span><span class="sc12">)</span><span class="sc24"> </span><span class="sc12">|</span><span class="sc24"> </span><span class="sc16">"\system32\cmd.exe /C "</span><span class="sc24"> </span><span class="sc12">|</span><span class="sc24"> </span><span class="sc12">&amp;</span><span class="sc0">path</span><span class="sc24"> </span><span class="sc12">|</span><span class="sc24"> 
-   </span><span class="sc16">"\powershell.bat"</span><span class="sc12">,</span><span class="sc24"> </span><span class="sc12">%</span><span class="sc0">Exec_Synchronous</span><span class="sc24"> </span><span class="sc12">+</span><span class="sc24"> </span><span class="sc12">%</span><span class="sc0">FilePath_Absolute</span><span class="sc12">);</span><span class="sc24">
+   </span><span class="sc12">&amp;</span><span class="sc0">ExitCode</span><span class="sc24"> </span><span class="sc12">=</span><span class="sc24"> </span><span class="sc4">Exec</span><span class="sc12">(</span><span class="sc4">GetEnv</span><span class="sc12">(</span><span class="sc16">"SystemRoot"</span><span class="sc12">)</span><span class="sc24"> </span><span class="sc12">|</span><span class="sc24"> </span><span class="sc16">"\system32\cmd.exe /C "</span><span class="sc24"> </span><span class="sc12">|</span><span class="sc24"> </span><span class="sc12">&amp;</span><span class="sc0">path</span><span class="sc24"> </span><span class="sc12">|</span><span class="sc24"> </span><span class="sc16">"\powershell.bat"</span><span class="sc12">,</span><span class="sc24"> </span><span class="sc12">%</span><span class="sc4">Exec_Synchronous</span><span class="sc24"> </span><span class="sc12">+</span><span class="sc24"> </span><span class="sc12">%</span><span class="sc4">FilePath_Absolute</span><span class="sc12">);</span><span class="sc24">
    
 </span><span class="sc4">catch</span><span class="sc24"> </span><span class="sc4">Exception</span><span class="sc24"> </span><span class="sc12">&amp;</span><span class="sc0">ex</span><span class="sc12">;</span><span class="sc24">
    </span><span class="sc4">MessageBox</span><span class="sc12">(</span><span class="sc3">0</span><span class="sc12">,</span><span class="sc24"> </span><span class="sc16">""</span><span class="sc12">,</span><span class="sc24"> </span><span class="sc3">0</span><span class="sc12">,</span><span class="sc24"> </span><span class="sc3">0</span><span class="sc12">,</span><span class="sc24"> </span><span class="sc16">"exec failed "</span><span class="sc24"> </span><span class="sc12">|</span><span class="sc24"> </span><span class="sc12">&amp;</span><span class="sc0">ex</span><span class="sc12">.</span><span class="sc0">ToString</span><span class="sc12">());</span><span class="sc24">
-</span><span class="sc0">end-try</span><span class="sc12">;</span></div>
+</span><span class="sc4">end-try</span><span class="sc12">;</span></pre></div>
